@@ -1,3 +1,8 @@
+2012-12-25  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvextract: new feature: Implemented extraction of ALAC into
+	Core Audio Format files (CAF). Implements #786.
+
 2012-12-23  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge, mmg: new feature: Implemented splitting by frame/field
